<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical"
    android:background="@color/background">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:gravity="center"
        android:textSize="50dp"
        android:textStyle="bold"
        android:text="@string/app_main"
        android:background="@color/btnBack"
        android:textColor="@color/btnText"/>
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="35dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:textSize="25dp"
            android:id="@+id/id_txt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:textSize="30dp" />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pw"
            android:inputType="textPassword"
            android:textSize="25dp"
            android:id="@+id/pw_txt"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:background="@color/btnBack"
        android:textColor="@color/btnText"/>


</LinearLayout>