<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:text="@string/all_pd"
        android:textColor="@color/btnText"
        android:background="@color/btnBack"
        android:textStyle="bold"
        android:id="@+id/all_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:text="@string/search_pd"
        android:textColor="@color/btnText"
        android:background="@color/btnBack"
        android:textStyle="bold"
        android:id="@+id/search_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:text="@string/bar_pd"
        android:textColor="@color/btnText"
        android:background="@color/btnBack"
        android:textStyle="bold"
        android:id="@+id/barcode_btn"
        />

</LinearLayout>